# practice-ga

./: README.md  exploring.ipynb
ga/: CMakeLists.txt  main.cpp
ga/inc/: Entity.h  EntityPool.h  Figure.h  GA.h  GAConfig.h  Solution.h  StatManager.h  TaskProperties.h  estimating.h
ga/src/: EntityPool.cpp  Field.cpp  Figure.cpp  GA.cpp  StatManager.cpp  TaskProperties.cpp  estimating.cpp  gaops.cpp
gatool/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setupsourcewindow.cpp  setupsourcewindow.h  setupsourcewindow.ui  sourcewindow.cpp  sourcewindow.h
gatool/ga/: CMakeLists.txt  main.cpp
gatool/ga/inc/: Entity.h  Field.h  GA.h  StatManager.h  TaskProperties.h  estimating.h  gaops.h
gatool/ga/src/: Entity.cpp  Field.cpp  GA.cpp  Solution.cpp  TaskProperties.cpp
